# 20days

./: CMakeLists.txt  README.md  about_triton.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pre-commit.yml
csrc/: CMakeLists.txt  bindings.cu  day01_printAdd.cu  day02_function.cu  day03_vectorAdd.cu  day04_matmul.cu  day05_matrixAdd.cu  day06_countElement.cu  day07_matrixCopy.cu  day08_relu.cu  day09_silu.cu  day10_conv1d.cu  day13_rmsnorm.cu  day14_fused_softmax.cu  day16_group_gemm.cu  day18_block_scaled_matmul.cu  day19_rope.cu  day20_conv2d.cu
day01/: addition.cu  printAdd.cu
day03/: VectorAddition.cu
day06/: CountArrayElement.py
day07/: MatrixCopy.cu  MatrixCopy.py
day08/: ReLU.cu  ReLU.py
src/: cuda_ops.pyi
src/gpu_20days/: __init__.py  cuda_kernels.py  day01_printAdd.py  day02_function.py  day03_vectorAdd.py  day04_matmul.py  day05_matrixAdd.py  day06_countElement.py  day07_matrixCopy.py  day08_relu.py  day09_silu.py  day10_conv1d.py  day13_rmsnorm.py  day14_fused_softmax.py  day16_group_gemm.py  day18_block_scaled_matmul.py  day19_rope.py  day20_conv2d.py
tests/: conftest.py  test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day13.py
